[gd_scene load_steps=8 format=2]

[ext_resource path="res://TowerRelated/AbstractTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Red/Outreach/Outreach_Omni.png" type="Texture" id=2]
[ext_resource path="res://TowerRelated/Color_Red/Outreach/Outreach_Wings_W.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Red/Outreach/Outreach.gd" type="Script" id=4]
[ext_resource path="res://TowerRelated/Color_Red/Outreach/Outreach_Omni_NoHealth.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Omni",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Omni_NoHealth",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.1612, 31.8212 )

[node name="Outreach" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="TowerBase" parent="." index="0"]
position = Vector2( 0.5, -18 )

[node name="BaseSprites" parent="TowerBase/KnockUpLayer" index="0"]
frames = SubResource( 1 )
animation = "Omni_NoHealth"

[node name="Wings_Left" type="Sprite" parent="TowerBase/KnockUpLayer" index="1"]
visible = false
position = Vector2( -9, 9 )
texture = ExtResource( 3 )

[node name="Wings_Right" type="Sprite" parent="TowerBase/KnockUpLayer" index="2"]
visible = false
position = Vector2( 9, 9 )
texture = ExtResource( 3 )
flip_h = true

[node name="CollisionShape" parent="." index="1"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )
